--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 set(CMAKE_TOOLCHAIN_FILE /Users/cliff/Code/vcpkg/scripts/buildsystems/vcpkg.cmake)
 include(/Users/cliff/Code/vcpkg/scripts/buildsystems/vcpkg.cmake)
-find_package(Boost REQUIRED COMPONENTS system serialization filesystem date_time)
+find_package(Boost REQUIRED COMPONENTS system serialization filesystem date_time log)
 
 include(CTest)
 enable_testing()
@@ -16,18 +16,14 @@ set(SOURCE_FILES
 "member.cpp"
 "message.hpp"
 "message.cpp"
-"custom_serialization.hpp"
-"custom_serialization.cpp"
 "gossip.hpp"
 "gossip.cpp"
 "main.cpp"
 )
 
 add_executable(cache-cluster ${SOURCE_FILES})
-target_link_libraries(cache-cluster PRIVATE Boost::boost
-                                            ${Boost_SYSTEM_LIBRARY}
-                                            ${Boost_UUID_LIBRARY}
-                                            ${Boost_SERIALIZATION_LIBRARY})
+target_link_libraries(cache-cluster PRIVATE Boost::boost ${Boost_LIBRARIES})
+target_include_directories(cache-cluster PRIVATE ${Boost_INCLUDE_DIRS})
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
